--- a/SR_Project/pom.xml
+++ b/SR_Project/pom.xml
@@ -83,12 +83,22 @@
 	    <version>0.9.5.2</version>
 	</dependency>
     
-    <!-- 제이수프 -->
-    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+    
+<!-- 2019-01-09 변경사항 -->
+	<!-- Json-->
+	<!-- https://mvnrepository.com/artifact/org.json/json  2019-01-08추가-->
+	<dependency>
+    	<groupId>org.json</groupId>
+    	<artifactId>json</artifactId>
+    	<version>20160810</version>
+	</dependency>
+	
+	<!-- Jsoup 사용버전으로 변경 -->
+	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 	<dependency>
 	    <groupId>org.jsoup</groupId>
 	    <artifactId>jsoup</artifactId>
-	    <version>1.10.2</version>
+	    <version>1.8.3</version>
 	</dependency>
     
     
